--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node":"14.15.0",
+    "npm":"6.14.8"
+  },
   "dependencies": {
     "express": "^4.18.1",
     "socket.io": "^4.5.2"
